--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@500&family=Fira+Sans&family=PT+Sans:ital@0;1&family=Work+Sans&display=swap');
+
 :root{
     --primary-color: #111827;
     --secondary-color: 
@@ -9,6 +11,7 @@
 body{
     background-color: var(--primary-color);
     color: var(--secondary-color);
+    font-family: 'PT Sans', sans-serif;
 }
 h1{
     text-align: center;
